Fixed hamburger in navbar to be visible Various other formatting changes to view pages for consistency Adjusted css file

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,75 +1,78 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap");
- 
+
 :root {
   --orange: #ffa500;
 }
- 
+
 * {
   font-family: "Nunito", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  text-transform: capitalize;
+  /* text-transform: capitalize; */
   outline: none;
   border: none;
   text-decoration: none;
   transition: all 0.2s linear;
 }
- 
+
 *::selection {
   background: var(--orange);
   color: #fff;
 }
 
- /* The above section was for testing purposes */
+/* The above section was for testing purposes */
 body {
-  padding: 50px;
+  /* padding: 50px; */
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-body::before{
+body::before {
   display: block;
-  content: '';
+  content: "";
   height: 120px;
 }
 
+/* contact page image sizing */
+.contact-img {
+  width: 75%;
+  height: auto;
+  margin: auto;
+}
+
 a {
-  color: #00B7FF;
+  color: #00b7ff;
 }
 
-header
-{
-  padding:0px;
-  text-align:center;
+header {
+  padding: 0px;
+  text-align: center;
 }
 
-td
-{
-  margin-top:5px;
-  margin-left: 10PX;
+td {
+  margin-top: 5px;
+  margin-left: 10px;
   margin-right: 10px;
-  padding:5px;
-  text-align:center;
+  padding: 5px;
+  text-align: center;
 }
 
-section
-{
-  border: 0.4in; 
+section {
+  border: 0.4in;
   background-color: rgb(191, 206, 168);
 }
 
-table{
-  border: 0.4in; 
-  padding:0in; 
+table {
+  border: 0.4in;
+  padding: 0in;
   background-color: rgb(232, 240, 220);
-
 }
 
-p{
+p {
   text-align: justify;
 }
 
-a{
+a {
   text-decoration: none;
 }
 .packages .box-container {
